--- a/styles/loading.css
+++ b/styles/loading.css
@@ -1,7 +1,6 @@
-@charset "utf-8";
-:root {
+/*:root {*/
 
-}
+/*}*/
 
 *{
     margin: 0;
@@ -22,15 +21,15 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 .wrapper .loading{
     width: 200px;
     height: 200px;
-    /*border: 5px solid transparent;*/
+    border: 5px solid transparent;
     border-top: 5px solid black;
-    /*border-radius: 50%;*/
-    /*animation: ani 3s linear infinite;*/
+    border-radius: 50%;
+    animation: ani 3s linear infinite;
     position: relative;
 }
 
@@ -40,8 +39,8 @@ body{
     height: 10px;
     background-color: #066cfa;
     position: absolute;
-    top: 20px;
-    right: 15px;
+    top: 23px;
+    right: 18px;
     border-radius: 50%;
     box-shadow: 0 0 20px #ffd800;
 }
