--- a/final_test/css/loading.css
+++ b/final_test/css/loading.css
@@ -31,6 +31,7 @@ body{
     border: 2px solid var(--color1);
     border-radius: 34% 66% 74% 26% / 46% 36% 64% 54% ;
     animation: ani 3s linear infinite;
+    /*box-shadow: 0px 0px 10px 10px var(--color1);*/
 }
 
 @keyframes ani {
@@ -54,5 +55,5 @@ body{
 .wrapper .circle:first-child{
     border: 2px solid  var(--color6);
     border-radius: 34% 66% 77% 23% / 18% 66% 34% 82%  ;
-    animation-duration: 5s;
+    animation-duration: 5s
 }
