--- a/final_test/css/svg.css
+++ b/final_test/css/svg.css
@@ -19,7 +19,7 @@ body{
 }
 
 .wrapper svg{
-    background-color: var(--color7);
+    /*background-color: var(--color7);*/
 }
 
 .wrapper svg line{
@@ -47,5 +47,73 @@ body{
     100%{
         transform: rotate(360deg);
         /*stroke-dashoffset: 300;*/
+    }
+}
+
+/*svgHeart*/
+
+.wrapper .heart-svg{
+    stroke: var(--color5);
+    fill: var(--color1);
+    stroke-dasharray: 54;
+    stroke-dashoffset: 53;
+}
+
+.wrapper svg path{
+    stroke-width: 1;
+}
+
+.like{
+    animation: like 3s ease forwards,
+    heartbeat 0.5s linear 2s 2 forwards;
+}
+
+.unlike{
+    animation: unlike 3s ease forwards;
+}
+
+@keyframes like {
+    0%{
+        stroke-dashoffset: 54;
+        stroke: var(--color5);
+        fill: var(--color1);
+    }
+    75%{
+        stroke-dashoffset: 0;
+        stroke: var(--color5);
+        fill: var(--color1);
+    }
+    100%{
+        stroke-dashoffset: 0;
+        stroke: var(--color2);
+    }
+}
+
+@keyframes unlike {
+    0%{
+        stroke-dashoffset: 0;
+        stroke: var(--color2);
+        fill: var(--color1);
+    }
+    75%{
+        stroke-dashoffset: 54;
+        stroke: var(--color2);
+        fill: var(--color1);
+    }
+    100%{
+        stroke-dashoffset: 54;
+        stroke: var(--color5);
+    }
+}
+
+@keyframes heartbeat {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(0.9);
+    }
+    100%{
+        transform: scale(1);
     }
 }
