--- a/setting.css
+++ b/setting.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 :root {
-    --color1: #ccccff66;
-    --color2: #6495ED66;
-    --color3: #40e0d866;
-    --color4: #9fe2bf66;
-    --color5: #de316366;
-    --color6: #ff7f5066;
-    --color7: #ffbf0066;
+    --color1: #ccccff;
+    --color2: #6495ED;
+    --color3: #40e0d8;
+    --color4: #9fe2bf;
+    --color5: #de3163;
+    --color6: #ff7f50;
+    --color7: #ffbf00;
 }
 
 *{
