--- a/portfolio.css
+++ b/portfolio.css
@@ -1,2 +1,92 @@
 @import "setting.css";
 
+body{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #161616;
+}
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.portfolio{
+    color: red;
+    position: absolute;
+}
+
+.contents-wrapper{
+    margin-top: 10%;
+    width: 85vw;
+    height: 100vh;
+}
+
+.contents-header{
+    /*background-color: #242424;*/
+    background-color: white;
+    border-radius: 8px 8px 0 0;
+    display: flex;
+    align-items: center;
+}
+
+.dots{
+    margin-left: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+}
+
+.dot1{
+    background-color: rgb(255, 95, 87);
+}
+
+.dot2{
+    background-color: rgb(245, 189, 79);
+}
+
+.dot3{
+    background-color: rgb(40, 198, 63);
+}
+
+
+.header-title{
+    margin-left: 40%;
+    font-size: 12px;
+}
+.contents{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100%;
+    height: 85vh;
+    /*border: 1px solid white;*/
+}
+
+aside{
+    border: 2px solid white;
+    background-color: var(--color3a);
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+img{
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+}
+
+aside p{
+    font-size: 22.4px;
+}
+
+section{
+    border: 2px solid white;
+    background-color: var(--color5a);
+}
+
