--- a/about.css
+++ b/about.css
@@ -1,33 +1,71 @@
-@import "setting.css";
+/*setting*/
+@charset "utf-8";
+:root {
+    --color1: #ccccff;
+    --color2: #6495ED;
+    --color3: #40e0d8;
+    --color4: #9fe2bf;
+    --color5: #de3163;
+    --color6: #ff7f50;
+    --color7: #ffbf00;
+    --basic : #282828;
+
+    --color1a: #ccccff77;
+    --color2a: #6495ED77;
+    --color3a: #40e0d899;
+    --color4a: #9fe2bf77;
+    --color5a: #de316799;
+    --color6a: #ff7f5077;
+    --color7a: #ffbf0077;
+}
+
+@font-face {
+    font-family: 'KoPubDotumMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/KoPubDotumMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 
+/*body*/
 body{
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #111;
+    background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/ocean.jpg?raw=true");
 }
 
 .wrapper{
     width: 100%;
     height: 100vh;
-}
-
-/*I'll be a Front-end developer*/
-.wrapper .title{
-    width: 100%;
-    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-top: 60px;
+}
+
+.wrapper .title{
+    width: 85vw;
+    height: 100%;
+    display: flex;
+    justify-content: left;
+    position:absolute;
 }
 
 .developer{
     position: absolute;
     width: 946.17px;
     height: 67.9px;
+    stroke-width: 1;
 }
 
 .wrapper path{
@@ -40,15 +78,12 @@ body{
 @keyframes animation {
     0%{
         stroke-dashoffset: 0;
-        stroke-width: 2;
     }
     50%{
         stroke-dashoffset: 200;
-        stroke-width: 2;
     }
     100%{
         stroke-dashoffset: 0;
-        stroke-width: 2;
     }
 }
 
@@ -62,125 +97,234 @@ body{
 }
 
 
-.wrapper path:nth-child(1) {
-    stroke-dasharray: 110;
-    stroke-dashoffset: 110;
+/*.wrapper path:nth-child(1) {*/
+/*    stroke-dasharray: 110;*/
+/*    stroke-dashoffset: 110;*/
+/*}*/
+
+/*.wrapper path:nth-child(2) {*/
+/*    stroke-dasharray: 55;*/
+/*    stroke-dashoffset: 55;*/
+/*}*/
+
+/*!*.wrapper path:nth-child(3),path:nth-child(4) {*!*/
+/*!*    stroke-dasharray: 114;*!*/
+/*!*    stroke-dashoffset: 114;*!*/
+/*!*}*!*/
+
+/*!*.wrapper path:nth-child(5) {*!*/
+/*!*    stroke-dasharray: 249;*!*/
+/*!*    stroke-dashoffset: 249;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(6) {*!*/
+/*!*    stroke-dasharray: 219;*!*/
+/*!*    stroke-dashoffset: 219;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(7) {*!*/
+/*!*    stroke-dasharray: 214;*!*/
+/*!*    stroke-dashoffset: 214;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(8) {*!*/
+/*!*    stroke-dasharray: 212;*!*/
+/*!*    stroke-dashoffset: 212;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(9) {*!*/
+/*!*    stroke-dasharray: 115;*!*/
+/*!*    stroke-dashoffset: 115;*!*/
+/*!*}*!*/
+
+/*!*.wrapper path:nth-child(10) {*!*/
+/*!*    stroke-dasharray: 193;*!*/
+/*!*    stroke-dashoffset: 193;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(11) {*!*/
+/*!*    stroke-dasharray: 190;*!*/
+/*!*    stroke-dashoffset: 190;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(12) {*!*/
+/*!*     stroke-dasharray: 142;*!*/
+/*!*     stroke-dashoffset: 142;*!*/
+/*!* }*!*/
+/*!*.wrapper path:nth-child(13) {*!*/
+/*!*    stroke-dasharray: 47;*!*/
+/*!*    stroke-dashoffset: 47;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(14) {*!*/
+/*!*    stroke-dasharray: 219;*!*/
+/*!*    stroke-dashoffset: 219;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(15) {*!*/
+/*!*     stroke-dasharray: 190;*!*/
+/*!*     stroke-dashoffset: 190;*!*/
+/*!* }*!*/
+/*!*.wrapper path:nth-child(16), path:nth-child(17) {*!*/
+/*!*    stroke-dasharray: 249;*!*/
+/*!*    stroke-dashoffset: 249;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(18), path:nth-child(20), path:nth-child(24) {*!*/
+/*!*     stroke-dasharray: 219;*!*/
+/*!*     stroke-dashoffset: 219;*!*/
+/*!* }*!*/
+/*!*.wrapper path:nth-child(19) {*!*/
+/*!*      stroke-dasharray: 158;*!*/
+/*!*      stroke-dashoffset: 158;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(21) {*!*/
+/*!*    stroke-dasharray: 114;*!*/
+/*!*    stroke-dashoffset: 114;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(22) {*!*/
+/*!*     stroke-dasharray: 193;*!*/
+/*!*     stroke-dashoffset: 193;*!*/
+/*!* }*!*/
+/*!*.wrapper path:nth-child(23) {*!*/
+/*!*      stroke-dasharray: 250;*!*/
+/*!*      stroke-dashoffset: 250;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(25) {*!*/
+/*!*    stroke-dasharray: 115;*!*/
+/*!*    stroke-dashoffset: 115;*!*/
+/*!*}*!*/
+/*!*.wrapper path:nth-child(26) {*!*/
+/*!*    stroke-dasharray: 31;*!*/
+/*!*    stroke-dashoffset: 31;*!*/
+/*!*}*!*/
+
+
+
+.wrapper .devHyeon path:nth-child(1), path:nth-child(10){
+    stroke-dasharray: 230;
+    stroke-dashoffset: 230;
 }
 
-.wrapper path:nth-child(2) {
-    stroke-dasharray: 55;
-    stroke-dashoffset: 55;
+.wrapper .devHyeon path:nth-child(2), path:nth-child(11){
+    stroke-dasharray: 184;
+    stroke-dashoffset: 184;
 }
 
-.wrapper path:nth-child(3),path:nth-child(4) {
-    stroke-dasharray: 114;
-    stroke-dashoffset: 114;
+.wrapper .devHyeon path:nth-child(3), path:nth-child(12){
+    stroke-dasharray: 156;
+    stroke-dashoffset: 156;
+}
+.wrapper .devHyeon path:nth-child(4), path:nth-child(13){
+    stroke-dasharray: 242;
+    stroke-dashoffset: 242;
+}
+.wrapper .devHyeon path:nth-child(5), path:nth-child(14){
+    stroke-dasharray: 199;
+    stroke-dashoffset: 199;
+}
+.wrapper .devHyeon  path:nth-child(6), path:nth-child(15){
+    stroke-dasharray: 184;
+    stroke-dashoffset: 184;
+}
+.wrapper .devHyeon  path:nth-child(7), path:nth-child(16){
+    stroke-dasharray: 177;
+    stroke-dashoffset: 177;
+}
+.wrapper .devHyeon  path:nth-child(8), path:nth-child(17){
+    stroke-dasharray: 182;
+    stroke-dashoffset: 182;
+}
+.wrapper .devHyeon  path:nth-child(9){
+    stroke-dasharray: 230;
+    stroke-dashoffset: 230;
 }
 
-.wrapper path:nth-child(5) {
-    stroke-dasharray: 249;
-    stroke-dashoffset: 249;
-}
-.wrapper path:nth-child(6) {
-    stroke-dasharray: 219;
-    stroke-dashoffset: 219;
-}
-.wrapper path:nth-child(7) {
-    stroke-dasharray: 214;
-    stroke-dashoffset: 214;
-}
-.wrapper path:nth-child(8) {
-    stroke-dasharray: 212;
-    stroke-dashoffset: 212;
-}
-.wrapper path:nth-child(9) {
-    stroke-dasharray: 115;
-    stroke-dashoffset: 115;
+
+/*contents*/
+.contents-wrapper{
+    margin-top: 10%;
+    width: 85vw;
+    height: 100vh;
 }
 
-.wrapper path:nth-child(10) {
-    stroke-dasharray: 193;
-    stroke-dashoffset: 193;
-}
-.wrapper path:nth-child(11) {
-    stroke-dasharray: 190;
-    stroke-dashoffset: 190;
-}
-.wrapper path:nth-child(12) {
-    stroke-dasharray: 142;
-    stroke-dashoffset: 142;
-}
-.wrapper path:nth-child(13) {
-    stroke-dasharray: 47;
-    stroke-dashoffset: 47;
-}
-.wrapper path:nth-child(14) {
-    stroke-dasharray: 219;
-    stroke-dashoffset: 219;
-}
-.wrapper path:nth-child(15) {
-    stroke-dasharray: 190;
-    stroke-dashoffset: 190;
-}
-.wrapper path:nth-child(16), path:nth-child(17) {
-    stroke-dasharray: 249;
-    stroke-dashoffset: 249;
-}
-.wrapper path:nth-child(18), path:nth-child(20), path:nth-child(24) {
-    stroke-dasharray: 219;
-    stroke-dashoffset: 219;
-}
-.wrapper path:nth-child(19) {
-    stroke-dasharray: 158;
-    stroke-dashoffset: 158;
-}
-.wrapper path:nth-child(21) {
-    stroke-dasharray: 114;
-    stroke-dashoffset: 114;
-}
-.wrapper path:nth-child(22) {
-    stroke-dasharray: 193;
-    stroke-dashoffset: 193;
-}
-.wrapper path:nth-child(23) {
-    stroke-dasharray: 250;
-    stroke-dashoffset: 250;
-}
-.wrapper path:nth-child(25) {
-    stroke-dasharray: 115;
-    stroke-dashoffset: 115;
-}
-.wrapper path:nth-child(26) {
-    stroke-dasharray: 31;
-    stroke-dashoffset: 31;
-}
-
-.wrapper nav{
+.contents-header{
+    /*background-color: #242424;*/
+    height: 30px;
+    background-color: white;
+    border-radius: 8px 8px 0 0;
     display: flex;
-    justify-content: right;
-    margin-top: 50px;
+    align-items: center;
 }
 
-.wrapper nav ul{
+.dots{
+    margin-left: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+}
+
+.dot1{
+    background-color: rgb(255, 95, 87);
+}
+
+.dot2{
+    background-color: rgb(245, 189, 79);
+}
+
+.dot3{
+    background-color: rgb(40, 198, 63);
+}
+
+.header-title{
+    margin-left: 40%;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.contents{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100%;
+    height: 85vh;
+    /*border: 1px solid white;*/
+}
+
+@media screen and (max-width:640px) {
+    .contents{
+        display: grid;
+        grid-template-columns: none;
+        grid-template-rows: 1fr 3fr;
+        width: 100%;
+        height: 85vh;
+        /*border: 1px solid white;*/
+    }
+}
+.contents .name{
     display: flex;
-    list-style: none;
-    margin-right: 3%;
-}
-
-.wrapper nav ul li {
-    margin-right: 30px;
-}
-
-ul li a{
-    color: #fff;
-    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 80%;
+    border-radius: 6px;
+    background-color: rgba(0,0,0, .1);
+    font-size: 20px;
+    font-family: 'KoPubDotumMedium';
     font-weight: 700;
-    text-decoration: none;
 }
 
-ul li:hover a{
-    color: var(--color6);
+aside{
+    padding-top: 5%;
+    border: 2px solid white;
+    background-color: rgba(239,242,245,.75);
+    display: flex;
+    flex-direction:column;
+    align-items: center;
 }
 
+img{
+    width: 130px;
+    height: 130px;
+    border-radius: 100%;
+    margin-bottom: 10px;
+}
 
+aside p{
+    font-size: 22.4px;
+}
 
+section{
+    border: 2px solid white;
+    background-color: #eff2f5;
+}
