--- a/about.css
+++ b/about.css
@@ -26,11 +26,29 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'twayair';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_tway@1.0/twayair.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SEBANG_Gothic_Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2104@1.0/SEBANG_Gothic_Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style:none;
+    text-decoration: none;
+    color: var(--basic);
 }
+
 
 
 /*body*/
@@ -41,6 +59,7 @@ body{
     align-items: center;
     background-color: #111;
     background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/ocean.jpg?raw=true");
+    background-repeat: repeat;
 }
 
 .wrapper{
@@ -59,13 +78,6 @@ body{
     display: flex;
     justify-content: left;
     position:absolute;
-}
-
-.developer{
-    position: absolute;
-    width: 946.17px;
-    height: 67.9px;
-    stroke-width: 1;
 }
 
 .wrapper path{
@@ -234,9 +246,8 @@ body{
 
 /*contents*/
 .contents-wrapper{
-    margin-top: 10%;
     width: 85vw;
-    height: 100vh;
+    height: 80vh;
 }
 
 .contents-header{
@@ -245,7 +256,7 @@ body{
     background-color: white;
     border-radius: 8px 8px 0 0;
     display: flex;
-    align-items: center;
+    align-items: center;;
 }
 
 .dots{
@@ -277,35 +288,15 @@ body{
     display: grid;
     grid-template-columns: 1fr 4fr;
     width: 100%;
-    height: 85vh;
+    height: 80vh;
+    padding: 10px;
     /*border: 1px solid white;*/
 }
 
-@media screen and (max-width:640px) {
-    .contents{
-        display: grid;
-        grid-template-columns: none;
-        grid-template-rows: 1fr 3fr;
-        width: 100%;
-        height: 85vh;
-        /*border: 1px solid white;*/
-    }
-}
-.contents .name{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 80%;
-    border-radius: 6px;
-    background-color: rgba(0,0,0, .1);
-    font-size: 20px;
-    font-family: 'KoPubDotumMedium';
-    font-weight: 700;
-}
 
 aside{
     padding-top: 5%;
+    padding-bottom: 5%;
     border: 2px solid white;
     background-color: rgba(239,242,245,.75);
     display: flex;
@@ -320,11 +311,141 @@ img{
     margin-bottom: 10px;
 }
 
+.contents aside .name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 80%;
+    border-radius: 6px;
+    background-color: rgba(0,0,0, .1);
+    font-size: 20px;
+    font-family: 'KoPubDotumMedium';
+    font-weight: 700;
+}
+
 aside p{
-    font-size: 22.4px;
+    margin-top: 30px;
+    font-size: 24px;
+    text-transform: uppercase;
+    font-family: 'twayair';
+    color: var(--basic);
 }
 
 section{
     border: 2px solid white;
     background-color: #eff2f5;
 }
+
+section {
+    padding: 10px;
+}
+section .PROJECTS .list1{
+    font-family: 'SEBANG_Gothic_Bold';
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+section .PROJECTS  ul .pj{
+    margin-bottom: 30px;
+}
+section .PROJECTS  ul li .pj-title{
+    font-size: 24px;
+    font-family: 'twayair';
+    margin-bottom: 5px;
+    color: var(--color2);
+}
+
+section .PROJECTS  ul li .tool{
+    margin-top: 10px;
+    font-size: 18px;
+    font-family: 'twayair';
+    color: #606060;
+}
+
+.CONTACT .list2{
+    font-family: 'SEBANG_Gothic_Bold';
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+
+
+@media screen and (max-width:640px) {
+    .contents-wrapper{
+        margin-top: 30%;
+    }
+    .contents{
+        display: grid;
+        grid-template-columns: none;
+        grid-template-rows: 1fr 4fr;
+        width: 100%;
+        height: 80vh;
+        /*border: 1px solid white;*/
+    }
+}
+
+
+/*cube*/
+
+.cube{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    transform-style: preserve-3d;
+    margin-top: 10px;
+}
+
+.cube:hover{
+    animation: ani 7s linear forwards;
+}
+
+@keyframes ani {
+    0%{
+        transform: rotateY(0deg) ;
+    }
+    100%{
+        transform: rotateY(1turn) ;
+    }
+}
+
+.cube .box{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color2);
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 12px;
+    font-family: 'KoPubDotumMedium';
+    font-weight: 700;
+    letter-spacing: .2em;
+}
+
+.front{
+    background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/greentable.png?raw=true");
+    background-size: 200px 200px;
+    transform: translateZ(100px);
+}
+
+.back{
+    background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/LGSI.jpg?raw=true");
+    background-size: 200px 200px;
+    transform: rotateY(180deg) translateZ(100px);
+}
+
+
+.right{
+    background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/smartfarm.jpg?raw=true");
+    background-size: 200px 200px;
+    transform: rotateY(90deg) translateZ(100px);
+}
+
+.left{
+    background-image: url("https://github.com/dhflxhdxhd/dhflxhdxhd.github.io/blob/main/img/erdiin.jpg?raw=true");
+    background-size: 200px 200px;
+    transform: rotateY(-90deg) translateZ(100px);
+}
+
