--- a/about.css
+++ b/about.css
@@ -114,101 +114,6 @@ body{
 }
 
 
-/*.wrapper path:nth-child(1) {*/
-/*    stroke-dasharray: 110;*/
-/*    stroke-dashoffset: 110;*/
-/*}*/
-
-/*.wrapper path:nth-child(2) {*/
-/*    stroke-dasharray: 55;*/
-/*    stroke-dashoffset: 55;*/
-/*}*/
-
-/*!*.wrapper path:nth-child(3),path:nth-child(4) {*!*/
-/*!*    stroke-dasharray: 114;*!*/
-/*!*    stroke-dashoffset: 114;*!*/
-/*!*}*!*/
-
-/*!*.wrapper path:nth-child(5) {*!*/
-/*!*    stroke-dasharray: 249;*!*/
-/*!*    stroke-dashoffset: 249;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(6) {*!*/
-/*!*    stroke-dasharray: 219;*!*/
-/*!*    stroke-dashoffset: 219;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(7) {*!*/
-/*!*    stroke-dasharray: 214;*!*/
-/*!*    stroke-dashoffset: 214;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(8) {*!*/
-/*!*    stroke-dasharray: 212;*!*/
-/*!*    stroke-dashoffset: 212;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(9) {*!*/
-/*!*    stroke-dasharray: 115;*!*/
-/*!*    stroke-dashoffset: 115;*!*/
-/*!*}*!*/
-
-/*!*.wrapper path:nth-child(10) {*!*/
-/*!*    stroke-dasharray: 193;*!*/
-/*!*    stroke-dashoffset: 193;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(11) {*!*/
-/*!*    stroke-dasharray: 190;*!*/
-/*!*    stroke-dashoffset: 190;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(12) {*!*/
-/*!*     stroke-dasharray: 142;*!*/
-/*!*     stroke-dashoffset: 142;*!*/
-/*!* }*!*/
-/*!*.wrapper path:nth-child(13) {*!*/
-/*!*    stroke-dasharray: 47;*!*/
-/*!*    stroke-dashoffset: 47;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(14) {*!*/
-/*!*    stroke-dasharray: 219;*!*/
-/*!*    stroke-dashoffset: 219;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(15) {*!*/
-/*!*     stroke-dasharray: 190;*!*/
-/*!*     stroke-dashoffset: 190;*!*/
-/*!* }*!*/
-/*!*.wrapper path:nth-child(16), path:nth-child(17) {*!*/
-/*!*    stroke-dasharray: 249;*!*/
-/*!*    stroke-dashoffset: 249;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(18), path:nth-child(20), path:nth-child(24) {*!*/
-/*!*     stroke-dasharray: 219;*!*/
-/*!*     stroke-dashoffset: 219;*!*/
-/*!* }*!*/
-/*!*.wrapper path:nth-child(19) {*!*/
-/*!*      stroke-dasharray: 158;*!*/
-/*!*      stroke-dashoffset: 158;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(21) {*!*/
-/*!*    stroke-dasharray: 114;*!*/
-/*!*    stroke-dashoffset: 114;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(22) {*!*/
-/*!*     stroke-dasharray: 193;*!*/
-/*!*     stroke-dashoffset: 193;*!*/
-/*!* }*!*/
-/*!*.wrapper path:nth-child(23) {*!*/
-/*!*      stroke-dasharray: 250;*!*/
-/*!*      stroke-dashoffset: 250;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(25) {*!*/
-/*!*    stroke-dasharray: 115;*!*/
-/*!*    stroke-dashoffset: 115;*!*/
-/*!*}*!*/
-/*!*.wrapper path:nth-child(26) {*!*/
-/*!*    stroke-dasharray: 31;*!*/
-/*!*    stroke-dashoffset: 31;*!*/
-/*!*}*!*/
-
-
-
 .wrapper .devHyeon path:nth-child(1), path:nth-child(10){
     stroke-dasharray: 230;
     stroke-dashoffset: 230;
@@ -294,7 +199,6 @@ body{
     grid-template-columns: 1fr 4fr;
     width: 100%;
     height: 80vh;
-    padding: 10px;
     /*border: 1px solid white;*/
 }
 
@@ -373,8 +277,7 @@ section .PROJECTS  ul li .tool{
     margin-bottom: 10px;
 }
 
-
-
+/*반응형*/
 @media screen and (max-width:640px) {
     .contents-wrapper{
         margin-top: 30%;
@@ -391,7 +294,6 @@ section .PROJECTS  ul li .tool{
 
 
 /*cube*/
-
 .cube{
     width: 200px;
     height: 200px;
