--- a/about.css
+++ b/about.css
@@ -297,21 +297,25 @@ section .PROJECTS  ul li .tool{
     height: 200px;
     position: relative;
     transform-style: preserve-3d;
-    margin-top: 10px;
+    margin: 20px 0;
+    transition: 8s;
 }
 
 .cube:hover{
-    animation: ani 7s linear infinite;
+    width: 500px;
+    height: 500px;
+    transform : rotateY(-360deg);
+    /*animation: ani 7s linear infinite;*/
 }
 
-@keyframes ani {
-    0%{
-        transform: rotateY(0deg) ;
-    }
-    100%{
-        transform: rotateY(1turn) ;
-    }
-}
+/*@keyframes ani {*/
+/*    0%{*/
+/*        transform: rotateY(0deg) ;*/
+/*    }*/
+/*    100%{*/
+/*        transform: rotateY(1turn) ;*/
+/*    }*/
+/*}*/
 
 .cube .box{
     position: absolute;
